2017-01-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, SystemRequirements): Updated and shortened

	* R/inline.R.in: Rewritten / expanded for better plugin support
	* inst/skeleton/configure: New file to create src/Makevars
	* inst/skeleton/configure.win: Idem
	* inst/skeleton/Makevars.in: Simplified, now filled from configure
	* inst/skeleton/Makevars.old: Old version
	* inst/skeleton/Makevars.win.old: Idem

	* inst/examples/kmeansViaPlugin.cpp: kmeans via sourceCpp()

2017-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* R/inline.R.in: Use configure to determine libraries
	* configure.ac: Also modify R/inline.R.in
	* cleanup: Remove R/inline.R

2017-01-03  Dirk Eddelbuettel  <edd@debian.org>

	* flags.R (RcppMLPACK.system.file): Made robust to empty string
	* inline.R: Simplified

2016-11-24  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Use PPA for libmlpack* which now builds

2016-11-20  Dirk Eddelbuettel  <edd@debian.org>

	* configure.ac: Now using pkg-config with MLPACK 2.1.0
	* .travis.yml: Use curl against local copies of libmlpack*
	* README.md: Edited

2016-10-19  Matthew Henderson  <matthew.james.henderson@gmail.com>

	* src/logisticRegression.cpp: New example

2016-10-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/naive_bayes.cpp: Minor correction
	* src/naiveBayesClassifier.cpp: Renamed

2016-10-04  Matthew Henderson  <matthew.james.henderson@gmail.com>

	* src/naive_bayes.cpp: New example

2016-10-03  Matthew Henderson  <matthew.james.henderson@gmail.com>

	* src/coverTreeNeighbor.cpp: Spelling correction

2016-09-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppMLPACK.h: Simplified
	* src/kmeans.cpp: Simpler include

	* src/coverTreeNeighbor.cpp: New example

	* configure.ac: Rewritten for external MLPACK
	* configure: Idem
	* m4/: Added with two helper snippets

	* DESCRIPTION: Updated to match MLPACK description

2016-08-31  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppMLPACK.h: Use external MLPACK