@@ -8,7 +8,9 @@ Maintainer: Qiang Kou <qkou@umail.iu.edu>
 Description: MLPACK is an intuitive, fast, scalable C++ machine learning
  library, meant to be a machine learning analog to LAPACK.
 OS_type: unix
-SystemRequirements: A C++11 compiler. Versions 4.8.*, 4.9.* or later of GCC will be fine. 
+SystemRequirements: A C++11 compiler: Versions 4.8.*, 4.9.* or later of GCC
+ will be fine. A complete installation of MLPACK, along with suitable
+ Armadillo and Boost installations.
 License: GPL (>= 2)
 Depends: R (>= 3.2.0)
 Imports: Rcpp (>= 0.12.4)
